Redis, Authorization and bug fixing

--- a/ApplicationsService/ApplicationsService.csproj
+++ b/ApplicationsService/ApplicationsService.csproj
@@ -26,6 +26,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Contracts\Contracts.csproj" />
+    <ProjectReference Include="..\IdentityService\IdentityService.csproj" />
   </ItemGroup>
 
 </Project>
