--- a/IdentityService/appsettings.json
+++ b/IdentityService/appsettings.json
@@ -1,13 +1,45 @@
 {
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "Default": "Host=pg-identity;Port=5432;Database=identitydb;Username=identity;Password=identitypwd"
+  },
+
+  "Jwt": {
+    "Key": "super_secret_key_123456789",
+    "Issuer": "IdentityService",
+    "Audience": "ApplicationsService"
+  },
+
+  "RabbitMQ": {
+    "Host": "rabbitmq",
+    "Username": "guest",
+    "Password": "guest"
+  },
+
   "Serilog": {
-    "Using": [ "Serilog.Sinks.Seq" ],
-    "MinimumLevel": "Information",
+    "Using": [ "Serilog.Sinks.Seq", "Serilog.Sinks.Console" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
     "WriteTo": [
       {
         "Name": "Seq",
-        "Args": { "serverUrl": "http://localhost:5342" }
-      }
-    ]
-  },
-  "AllowedHosts": "*"
+        "Args": { "serverUrl": "http://seq:80" }
+      },
+      { "Name": "Console" }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+  }
 }
